--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ body{
 }
 
 .glassCard{
-  background: rgb(255, 255, 255);
+  background: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(255,255,255,.14);
   border-radius: var(--radius);
   padding: 16px;
@@ -185,7 +185,6 @@ body{
   font-weight: 800;
   margin-bottom: 12px;
   letter-spacing: -.02em;
-  color: #000;
 }
 
 .hScroll{
